2008-10-03  Alp Toker  <alp@nuanti.com>

        Remove some left-over GTK+ includes. No change in functionality.

        * platform/Cursor.h:
        * platform/graphics/Icon.h:
        * platform/gtk/RenderThemeGtk.h:

2008-10-03  Alp Toker  <alp@nuanti.com>

        Build fix for trailing comment after #endif

        * dom/ElementRareData.h:

2008-10-03  David Hyatt  <hyatt@apple.com>

        Remove addToDirtyRegion.
        
        Reviewed by Oliver Hunt

        * page/Chrome.cpp:
        * page/Chrome.h:
        * page/ChromeClient.h:
        * platform/ScrollView.h:
        * platform/gtk/ScrollViewGtk.cpp:
        * platform/qt/ScrollViewQt.cpp:
        * platform/win/ScrollViewWin.cpp:

2008-10-03  Dan Bernstein  <mitz@apple.com>

        Reviewed by Maciej Stachowiak.

        - fix a CachedResource leak introduced in r37176 

        Undo r37176 and instead allow pruneDeadResources() to be re-entered, but
        afterwards bail out of the outer pruneDeadResources().

        * loader/Cache.cpp:
        (WebCore::Cache::Cache):
        (WebCore::Cache::pruneDeadResources):
        (WebCore::Cache::remove):
        * loader/Cache.h:

2008-10-03  David Hyatt  <hyatt@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=21330

        Fix Gtk adjustments so that they are properly checked again before creating horizontal/vertical
        scrollbars.
        
        Reviewed by Oliver Hunt

        * platform/ScrollView.cpp:
        (WebCore::ScrollView::setHasHorizontalScrollbar):
        (WebCore::ScrollView::setHasVerticalScrollbar):
        (WebCore::ScrollView::platformHasHorizontalAdjustment):
        (WebCore::ScrollView::platformHasVerticalAdjustment):
        * platform/ScrollView.h:
        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollView::adjustmentChanged):
        (WebCore::ScrollView::ScrollView):
        (WebCore::ScrollView::~ScrollView):
        (WebCore::ScrollView::setGtkAdjustments):